<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:id="@+id/rl_ac_up_pwd_bg">

    <LinearLayout
        android:id="@+id/ll_ac_up_pwd_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp">

        <LinearLayout
            android:id="@+id/ll_ac_up_pwd_oldpassword"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_ac_up_pwd_oldpassword"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/ac_up_pwd_oldpassword"
                style="@style/ac_up_pwd_main_tv"/>

            <EditText
                android:id="@+id/et_ac_up_pwd_oldpassword"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:inputType="textPassword"
                android:hint="@string/ac_up_pwd_oldpassword_stips"
                style="@style/ac_up_pwd_main_et"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_ac_up_pwd_newpassword"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_ac_up_pwd_newpassword"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/ac_up_pwd_newpassword"
                style="@style/ac_up_pwd_main_tv"/>

            <EditText
                android:id="@+id/et_ac_up_pwd_newpassword"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:inputType="textPassword"
                android:hint="@string/ac_up_pwd_newpassword_stips"
                style="@style/ac_up_pwd_main_et"/>

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btn_ac_up_pwd_update_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/ac_up_pwd_btn"/>

        </RelativeLayout>

    </LinearLayout>

</RelativeLayout>