<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:id="@+id/rl_ac_login_bg">

    <TextView
        android:id="@+id/tv_ac_login_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/ll_ac_login_main"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:textSize="20sp"
        android:text="@string/ac_login_register" />

    <LinearLayout
        android:id="@+id/ll_ac_login_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:id="@+id/ll_ac_login_role"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_ac_login_role"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/ac_login_role"
                style="@style/ac_login_main_tv" />

            <Spinner
                android:id="@+id/spn_ac_login_role"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:entries="@array/ac_login_role_spn"
                android:layout_marginRight="45dp"
                android:layout_marginEnd="45dp"
                android:spinnerMode="dropdown" />

        </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_ac_login_user_id"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_ac_login_user_id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/ac_login_user_id"
            style="@style/ac_login_main_tv" />

        <EditText
            android:id="@+id/et_ac_login_user_id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            style="@style/ac_login_main_et"
            android:inputType="text"
            android:hint="@string/ac_login_user_id_stips"/>

    </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_ac_login_user_pwd"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_ac_login_user_pwd"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/ac_login_user_pwd"
                style="@style/ac_login_main_tv" />

            <EditText
                android:id="@+id/et_ac_login_pwd"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                style="@style/ac_login_main_et"
                android:inputType="textPassword"
                android:hint="@string/ac_login_user_pwd_tips"/>

        </LinearLayout>

        <RelativeLayout
            android:id="@+id/rl_ac_login_btn"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="10dp">

            <Button
                android:id="@+id/btn_ac_login_login"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/ac_login_btn"/>

        </RelativeLayout>

    </LinearLayout>

</RelativeLayout>